@@ -1,15 +1,15 @@
 export function arrayIndexOf(needle, haystack) {
-    const existingIndicies = needle.map((d) => haystack.indexOf(d));
+    const existingIndices = needle.map((d) => haystack.indexOf(d));
     if (
-        existingIndicies.length && // check all tiles are defined
-        !existingIndicies.some((d) => d == -1) && // tiles exist in new list
-            existingIndicies
+        existingIndices.length && // check all tiles are defined
+        !existingIndices.some((d) => d == -1) && // tiles exist in new list
+            existingIndices
                 .every((d, i) => (
-                    i === existingIndicies.length - 1 ||
-                    d < existingIndicies[i + 1]
+                    i === existingIndices.length - 1 ||
+                    d < existingIndices[i + 1]
                 )) // and are all sequential
         ) {
-        return existingIndicies[0];
+        return existingIndices[0];
     }
     else {
         return -1;
