@@ -9,3 +9,4 @@
 - Sort imported spritesheet into rows properly
 - Autodismiss new mapping screen
 - Tabs can be maximized
+- Sprite swapping keyboard shortcuts added
